# namer

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pylintrc  Dockerfile  docker_build.sh  eslint.config.mjs  install instructions.md  install_instructions.md  lint-staged.config.cjs  lint-staged.config.js  namer.cfg  namer.cfg.default  namer.cfg.sample  namer.py  namer_dirscanner.py  namer_dirscanner_test.py  namer_ffmpeg.py  namer_ffmpeg_test.py  namer_file_parser.py  namer_file_parser_test.py  namer_metadataapi.py  namer_metadataapi_test.py  namer_moviexml.py  namer_moviexml_test.py  namer_mutagen.py  namer_mutagen_test.py  namer_test.py  namer_types.py  namer_types_test.py  namer_watchdog.py  namer_watchdog_test.py  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  readme.rst  release.sh  (+2 more)
.github/workflows/: auto-release-on-tag.yml  auto-tag-on-new-pip-version.yml  ci.yml  release.yml
.husky/: pre-commit
namer/: __main__.py  command.py  comparison_results.py  configuration.py  configuration_utils.py  database.py  ffmpeg.py  fileexplorer.py  fileinfo.py  filenameparser.py  filenameparts.py  fileutils.py  http.py  metadataapi.py  moviexml.py  mutagen.py  name_formatter.py  namer.cfg.default  namer.py  types.py  videohashes.py  videophash.py  videophashstash.py  watchdog.py
namer/models/: __init__.py  base.py  file.py
namer/videophash/: __init__.py  imagehash.py  videophash.py  videophashstash.py
namer/web/: __init__.py  __main__.py  actions.py  api.py  helpers.py  main.py  routes.py  server.py
namer/web/public/: browserconfig.xml  site.webmanifest
namer/web/public/js/: main.js
namer/web/routes/: api.py  web.py
namer/web/templates/: base.html  failed.html  files.html  index.html
namer/web/templates/components/: card.html  searchResults.html
namer/web/templates/pages/: failed.html
namer/web/templates/partials/: base.html
src/css/: main.scss
src/js/: helpers.js  main.js  themes.js
src/templates/components/: card.html  cardLog.html  navigations.html  performersBadges.html  performers_badges.html
src/templates/pages/: failed.html  index.html  queue.html  settings.html
src/templates/partials/: base.html
src/templates/render/: failedFiles.html  fileActions.html  logDetails.html  logFile.html  performerBadge.html  searchResults.html
test/: EvilAngel - 2022-01-03 - Carmela Clutch Fabulous Anal 3-Way.nfo  dc.json  ea.full.json  ea.json  ea.nfo  full.json  namer_configparser_test.py  namer_container_test.py  namer_ffmpeg_test.py  namer_file_parser_test.py  namer_fileutils_test.py  namer_metadataapi_test.py  namer_moviexml_test.py  namer_mutagen_test.py  namer_test.py  namer_types_test.py  namer_videophash_test.py  namer_watchdog_test.py  namer_web_test.py  namer_webhook_test.py  p18.json  ssb2.json  test_mutagen.py  updatejson.ps1  updatejson.sh  utils.py  wrath-of-god-full.json  wrath_of_god.json
test/nzb_dir/: sample.txt
test/nzb_dir/real_file/: bigger_file.txt
test/web/: fake_tpdb.py  namer_web_pageobjects.py  namer_web_test.py  parrot_webserver.py
