[tool.poetry]
name = "namer"
version = "1.18.6"
description = "A namer of video files based on metadata from the porndb."
readme = "readme.rst"
authors = ["4c0d3r <4c0d3r@protonmail.com>"]
include = ["**/web/public/assets/**/*", "**/web/templates/**/*", "**/namer.cfg.default", "namer/tools/videohashes*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
rapidfuzz = "^3.0.0"
watchdog = "^4.0.0"
pathvalidate = "^3.0.0"
requests = "^2.27.1"
mutagen = "^1.45.1"
schedule = "^1.1.0"
loguru = "^0.7.0"
Unidecode = "^1.3.4"
flask = "^3.0.0"
waitress = "^3.0.0"
Flask-Compress = "^1.12"
Pillow = "^10.0.0"
requests-cache = "^1.0.0"
ffmpeg-python = "^0.2.0"
jsonpickle = "^3.0.1"
ConfigUpdater = "^3.1.1"
oshash = "^0.1.1"
pony = "^0.7.16"
numpy = "^1.26.1"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.0"
ruff = "^0.1.4"
selenium = "^4.6.0"
assertpy = "^1.1"
poethepoet = "^0.24"
pony-stubs = "^0.5.2"

[tool.ruff]
exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist", "*migrations*", "init", "node_modules"]
line-length = 320
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E722"]

[tool.poe.tasks]
install_npm = {shell="pnpm install"}
build_node = {shell="pnpm run build"}
install_videohashes_src = {shell="command -v git >/dev/null && git submodule update || echo 'Skipping git sub module update'"}
build_videohashes = {shell="make build -C ./videohashes"}
move_videohashes = {"script" = "shutil:copytree('./videohashes/dist', './namer/tools', dirs_exist_ok=True)"}
build_namer = {shell="poetry build"}
build_deps = ["install_npm", "build_node", "install_videohashes_src", "build_videohashes", "move_videohashes"]
test_format = {shell="poetry run ruff check ."}
test_namer = {shell="poetry run pytest --log-cli-level=info --capture=no"}
test = ["test_format", "test_namer"]
build_all = ["build_deps", "test", "build_namer"]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
namer = "namer.__main__:main"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
